--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 		
 		<repository>
 		    <id>nexusRepo</id>
-		    <url>http://44.210.238.199:8081/repository/myrepo/</url>
+		    <url>http://44.199.204.101:8081/repository/firstrepo//</url>
 		</repository>
   	</distributionManagement>
 	
